--- a/Lesson 3/style/styles.css
+++ b/Lesson 3/style/styles.css
@@ -12,7 +12,7 @@
     padding-bottom:31px;
     font-size:48px;
     font-family:'M PLUS 1', sans-serif;
-    font-weight:regular;
+    font-weight:normal;
     color:#E8C23E; 
 }
 
@@ -77,7 +77,7 @@ span{
 }
 
 .card_subtitle{    
-    font-weight:regular;
+    font-weight:normal;
     font-size:20px;
     color:#E8C23E;     
     box-sizing:border-box;
@@ -133,7 +133,7 @@ a{
     max-height:11.323%;  
     font-size:48px;
     font-family:'M PLUS 1', sans-serif;
-    font-weight:regular;
+    font-weight:normal;
     color:#E8C23E; 
     padding-bottom:85px;  
     box-sizing:border-box;  
@@ -144,7 +144,7 @@ a{
     font-family: 'Marcellus SC', serif;
     color:#A89D9D;
     font-size:36px;
-    font-weight:regular;    
+    font-weight:normal;    
     width:31.87%;
     line-height:2;    
 }
