--- a/Lesson 3/style/styles.css
+++ b/Lesson 3/style/styles.css
@@ -2,7 +2,7 @@
     font-family: 'Inika', serif;
     font-weight:bold; 
     font-size:40px;
-    text-align:center;
+    text-align:center;    
 }
 
 .header{
@@ -22,6 +22,7 @@ span{
 
 .head{
     background-image:url("../img/Castle.png");
+    background-size:100%;
     height:803px;
     width:100%;
     padding:206px 80px;
@@ -43,9 +44,8 @@ span{
     box-sizing:border-box; 
 }
 
-.h1{
-    padding-left:5.56%;
-    padding-top:72px;
+.h1{    
+    padding: 2.54% 5.56% 0;
 }
 
 .cards{
@@ -60,7 +60,7 @@ span{
     box-shadow:0px 4px 4px rgba(0,0,0,25%);
     display:inline-block;
     text-align:left;
-    padding-bottom:178px;
+    padding-bottom:154px;
 }
 
 .card_image{
