--- a/Lesson 3/style/styles.css
+++ b/Lesson 3/style/styles.css
@@ -1,8 +1,9 @@
-.body{
+body{
     font-family: 'Inika', serif;
     font-weight:bold; 
     font-size:40px;
-    text-align:center;    
+    text-align:center;
+    margin:0;
 }
 
 .header{
@@ -114,6 +115,7 @@ span{
 
 a{
     text-decoration:none;
+    color:inherit; 
 }
 
 .button{
