--- a/Lesson 4/style/styles.css
+++ b/Lesson 4/style/styles.css
@@ -17,19 +17,23 @@ a{
 
 .header{
     background-color:#202846;    
-    height:4.76%;    /*min-height 4.76% как результат 90/1889*100 на деле не только соответсвует контенту, но и вообще ни на что не влияет*/    
     font-weight:bold;
     color:#FFFFFF;
-    overflow:visible;    
-    padding-left:7.18%;     
+    overflow:visible;         
+}
+
+section{    
+    min-width:80.23%;
+    display: inline-block;
+    text-align: center;
 }
 
 .mount{
-    width:9.29;
-    max-height:77.77%;    
-    display: inline-block;    
-    padding-top:0.52%;
+    width:9.29%;
+    display: inline-block;
     vertical-align: top;
+    padding:0.52% 0;
+    margin-left:7.18%;
 }
 
 #mount{
@@ -37,44 +41,45 @@ a{
 }
 
 .headalign{
-    text-align:center;
-    width:74.1%; /*1422.55px, до лого включительно - 316.45px или 16.48%, остальному контенту 1603.55px или 83.51%*/    
-    height:4.76%;/*идентично header*/ 
-    padding-top:0.52%; 
+    text-align:right;
+    width:88.18%;
+    padding:0.52% 0.64% 0 0;
 }
 
 .list{
     display:inline-block;
-    font-size:1.09em;
+    font-size:1.25vw;
     overflow:visible;
     width:100%;
-    text-align:right;
-    margin-right:0.52%;
+    text-align:right;    
 }
 
 .menu{
     display:inline-block;
     width:fit-content;
     vertical-align:middle;
+    padding-top:0.423%;
 }
 
 .gap{
-    width:3.7%;
+    width:3.9%;
     display: inline-block;
     vertical-align:middle;
 }
 
 .cab{
     display:inline-block;
-    max-width:15%;
+    max-width:12.51%;
     text-align:center;
     vertical-align:middle;
+    padding-top:0.37%;
 }
 
 .langlogo{
-    width:6.14%;
+    min-width:7.65%;
     vertical-align:middle;
-    text-align: left;    
+    padding-top:0.423%;
+    text-align:left;
 }
 
 .globe{
@@ -82,18 +87,19 @@ a{
     width:63%;
     vertical-align:middle;
     color:rgb(255, 255, 255, 0.63);
+    text-align:center;
 }
 
 #globe{
-    max-width:80%; /*60px*/    
+    width:80%; /*60px*/
+    display: inline-block;
 }
 
 .lang{
-    font-size:28px;
-    display: inline-block;
-    width:29.66%;
+    font-size:1.45vw;
+    display: inline-block;    
     vertical-align: middle;
-    padding-left:6.77%;
+    width:23%;    
 }
 
 #inline{
@@ -102,34 +108,38 @@ a{
 }
 
 .reserv{
-    background-color:#C6C6DC;
-    height:90px;
+    background-color:#C6C6DC;    
     font-style:italic;
-    font-size:48px;
+    font-size:2.5vw;
     color:#202846;
     padding-left:11.82%;
     vertical-align: middle;
+    min-height:7.41vh;
+}
+
+#reserv{
+    padding:1.23vh 0;    
 }
 
 .location{
     background-color:#E8E8E8;
-    margin:2.94% auto 1.05%;
-    height:73px;          /*пришлось указывать в px, иначе получается по контенту*/
+    margin:2.94% auto 1.05%;    
     width:77.55%;
-    font-size:28px;
-    padding-top:17.5px;   /*24% как результат padding-top 17.5px/73px height блока выталкивает слова из блока, значительно расширяя его*/
+    font-size:1.45vw;
+    padding:0.92vh 0;
     text-align:center;
     position:relative;
+    vertical-align: top;
 }
 
 .chooseloc{
     color:rgb(0, 0, 0, 61%);
     width:fit-content;
-    display:inline-block;
+    display:inline-block;    
 }
 
 .triangle{
-    width:34px;            /*статичный элемент, поэтому width в px*/        
+    width:2.28%;
     position:absolute;
     right:0.94%;
 }
@@ -137,9 +147,9 @@ a{
 .cards{
     background-color:#BDBDC6;
     width:77.55%;
-    min-height:15.88%;
+    height:fit-content; /*300px - 15.88vh*/
     margin:1.9% auto;
-    padding: 27px 1.14% 1% 0; /*padding-top 27px/300px height'а карточки составит 9% - получается несоразмерно. При этом 1.42% как результат 27px/1889px height'а всего макета подходит*/
+    padding: 1.42vh 1.14% 0 0; 
     position: relative;
 }
 
@@ -164,54 +174,60 @@ a{
 .title{
     font-weight: bold;
     font-style:italic;
-    font-size:36px;
+    font-size:1.875vw;
     color:#353C57;
     margin-left:0.067%;
     border-bottom: 3px solid #FFFFFF;
 }
 
 .text{
-    min-height:67.39%;  /*не действует, всё получается по контенту, с тем же успехом можно было бы вообще не указывать*/  
+    min-height:9.74vh;  
     color:#202846;
     background-color:#D7D7DD;
     display:inline-block;
-    text-align:center;
-    position:relative;
-    margin-top:11.5px;   /*4.21% как результат 11.5/273 (у карточек padding-top 27px) делает слишком большой отступ*/
-    width:100%;
-    min-height:100%;
+    text-align:center;    
+    margin-top:0.52vh;   
+    width:100%;    
     font-weight:normal;
     font-style:normal;
+    font-size:1.145vw;
     display:inline-block; 
-    padding:28px 3% 23px; /*То же самое, что с margin-top, 10.25% top и 8.42% bottom слишком большие паддинги. Может, не тот делитель? 1.48% и 1.21% с делителем 1889px выглядят узковато*/    
+    padding:1.41% 3% 1.21vh; 
+    vertical-align: middle;
+    margin-bottom:11%;
 }
 
-.star{
+.texthw{
     display: inline-block;
+}
+
+.star{    
     fill:white;
     position:absolute;
     right:1.14%;
-    top:5.666%;
+    top:5.333%;
+    width:3.35%;
 }
 
 .button{
     background-color:#202846;
     color:#FFFFFF;
-    font-size:24px;
+    font-size:1.25vw;
     text-align:center;
     position:absolute;
-    left:91%;
-    bottom:-10%; 
-    width:200px;
-    height:60px;
+    right:-3.22%;
+    bottom:3.66%;
+    width:10.41vw;    
+    height:20%;
     border-radius:30px;
     font-weight:normal;
     z-index:1;
 }
 
 .buttext{
-    padding-top:15px;    
-}
+    display:inline-block;
+    padding-top:5%;
+}  
 
 #first:hover{
     background-color:#AEAEE2;
@@ -295,16 +311,16 @@ a{
     margin:26px 30px;    
 }
 
-.footer{    
-    height:90px;
+.footer{        
     background-color:#202846;
-    padding:21px 0 0 6.66%;    
+    padding:1.11vh 0 1.16vh 6.66%;    
     color:#FFFFFF;
-    font-size:36px;
+    font-size:1.875vw;
     font-weight:normal;
     font-style:italic;    
-    width:auto;
-    margin-top:4.6%;
+    width:100%;
+    margin-top:2.69vh;
+    display:inline-block;
 }
 
 /*
@@ -323,4 +339,327 @@ a{
 #txpad4{
     padding:21px 24px 0;    
 }
-*/
+*//*
+----------------------------------------------------------
+                        Newest reserve 
+*{
+    box-sizing:border-box;
+}
+
+body{
+    font-family:'PT Sans', sans-serif;
+    font-weight: normal;
+    font-size: 22px;
+    background-color:#DCDCDC;
+    margin:0;    
+}
+
+a{
+    text-decoration:none;
+    color:inherit;
+}
+
+.header{
+    background-color:#202846;    
+    font-weight:bold;
+    color:#FFFFFF;
+    overflow:visible;    
+    padding-right:3.28%;
+    text-align:center;
+}
+
+section{    
+    min-width:89.5%;
+    display: inline-block;
+    text-align: right;         
+}
+
+.mount{
+    max-width:10.38%;
+    display: inline-block;
+    vertical-align: top;
+    padding-top:0.52%;
+    text-align:left;
+}
+
+#mount{
+    width:100%;
+}
+
+.headalign{
+    text-align:right;
+    width:72%;
+    padding:0.52% 0;
+}
+
+.list{
+    display:inline-block;
+    font-size:1.25vw;
+    overflow:visible;
+    width:100%;
+    text-align:right;    
+}
+
+.menu{
+    display:inline-block;
+    width:fit-content;
+    vertical-align:middle;
+}
+
+.gap{
+    width:3.1%;
+    display: inline-block;
+    vertical-align:middle;
+}
+
+.cab{
+    display:inline-block;
+    max-width:15%;
+    text-align:center;
+    vertical-align:middle;
+}
+
+.langlogo{
+    min-width:6.86%;
+    vertical-align:middle;    
+}
+
+.globe{
+    display: inline-block;
+    width:63%;
+    vertical-align:middle;
+    color:rgb(255, 255, 255, 0.63);
+    text-align:center;
+}
+
+#globe{
+    width:80%; /*60px*//*
+    display:inline-block;    
+}
+
+.lang{
+    font-size:1.45vw;
+    display: inline-block;    
+    vertical-align: middle;    
+}
+
+#inline{
+    display:inline-block;
+    color:inherit;
+}
+
+.reserv{
+    background-color:#C6C6DC;    
+    font-style:italic;
+    font-size:2.5vw;
+    color:#202846;
+    padding-left:11.82%;
+    vertical-align: middle;
+    min-height:7.41vh;
+}
+
+#reserv{
+    padding:1.23 0;    
+}
+
+.location{
+    background-color:#E8E8E8;
+    margin:2.94% auto 1.05%;    
+    width:77.55%;
+    font-size:1.45vw;
+    padding:0.92vh 0;   
+    text-align:center;
+    position:relative;
+    vertical-align: top;
+}
+
+.chooseloc{
+    color:rgb(0, 0, 0, 61%);
+    width:fit-content;
+    display:inline-block;    
+}
+
+.triangle{
+    width:2.28%;
+    position:absolute;
+    right:0.94%;
+}
+
+.cards{
+    background-color:#BDBDC6;
+    width:77.55%;
+    min-height:15.88vh;
+    margin:1.9% auto;
+    padding: 1.42vh 1.14% 1% 0; 
+    position: relative;
+}
+
+.img{
+    display:inline-block;
+    width:32.31%;
+    min-height:81%;
+    vertical-align:top;    
+    margin:1px 6.91% 0 6.85%;
+}
+
+#imgwidth{
+    width:100%;
+}
+
+.cardtext{
+    width:47.81%;
+    min-height:91%;
+    display:inline-block;
+}
+
+.title{
+    font-weight: bold;
+    font-style:italic;
+    font-size:1.875vw;
+    color:#353C57;
+    margin-left:0.067%;
+    border-bottom: 3px solid #FFFFFF;
+}
+
+.text{
+    min-height:9.74vh;  
+    color:#202846;
+    background-color:#D7D7DD;
+    display:inline-block;
+    text-align:center;    
+    margin-top:0.52vh;   
+    width:100%;    
+    font-weight:normal;
+    font-style:normal;
+    font-size:1.145vw;
+    display:inline-block; 
+    padding:1.41% 3% 1.21vh; 
+    vertical-align: middle;
+    margin-bottom:10%;
+}
+
+.texthw{
+    display: inline-block;
+}
+
+.star{    
+    fill:white;
+    position:absolute;
+    right:1.14%;
+    top:5.333%;
+    width:3.35%;
+}
+
+.button{
+    background-color:#202846;
+    color:#FFFFFF;
+    font-size:1.25vw;
+    text-align:center;
+    position:absolute;
+    right:-3.22%;
+    bottom:3.33%;
+    width:10.41vw;    
+    height:20%;
+    border-radius:30px;
+    font-weight:normal;
+    z-index:1;
+}
+
+.buttext{
+    display:inline-block;
+    padding-top:5%;
+}  
+
+#first:hover{
+    background-color:#AEAEE2;
+    box-shadow: 5px 5px 30px rgba(0, 0, 255, 25%);
+}
+
+#first:hover .star{
+    fill:yellow;
+}
+
+#first:hover .button{
+    background-color:#EF075B;
+}
+
+#second:hover{
+    background-color:#AEAEE2;
+    box-shadow: 5px 5px 30px rgba(0, 0, 255, 25%);
+}
+
+#second:hover .star{
+    fill:yellow;
+}
+
+#second:hover .button{
+    background-color:#EF075B;
+}
+
+#third:hover{
+    background-color:#AEAEE2;
+    box-shadow: 5px 5px 30px rgba(0, 0, 255, 25%);
+}
+
+#third:hover .star{
+    fill:yellow;
+}
+
+#third:hover .button{
+    background-color:#EF075B;
+}
+
+#fourth:hover{
+    background-color:#AEAEE2;
+    box-shadow: 5px 5px 30px rgba(0, 0, 255, 25%);
+}
+
+#fourth:hover .star{
+    fill:yellow;
+}
+
+#fourth:hover .button{
+    background-color:#EF075B;
+}
+
+.blank{
+    position:fixed;
+    background-color:#55576862;
+    border-radius:50%;
+    width:101px;
+    min-height:101px;
+    max-height:101px;    
+    left:91.875%;
+    top:70.93%;    
+    z-index: 2; 
+}
+
+.hocuspocus{ 
+    position:absolute; 
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;    
+    background-image: url('../img/empty.gif');
+}
+
+.arrow{
+    position:relative;    
+    text-align:center;   
+    z-index:3;
+    width:43.29px;
+    height:50.5px;
+    margin:26px 30px;    
+}
+
+.footer{        
+    background-color:#202846;
+    padding:1.11vh 0 1.16vh 6.66%;    
+    color:#FFFFFF;
+    font-size:1.875vw;
+    font-weight:normal;
+    font-style:italic;    
+    width:100%;
+    margin-top:2.69vh;
+    display:inline-block;
+}*/
