--- a/Lesson 4/style/styles.css
+++ b/Lesson 4/style/styles.css
@@ -146,16 +146,16 @@ section{
     width:77.55%;
     height:fit-content; /*300px - 15.88vh*/
     margin:1.9% auto;
-    padding: 1.42vh 1.14% 0 0; 
+    padding: 1.48vh 1.14% 0 0; 
     position: relative;
 }
 
 .img{
     display:inline-block;
-    width:32.31%;
-    min-height:81%;
-    vertical-align:top;    
-    margin:1px 6.91% 0 6.85%;
+    width:40.69%;
+    height:81%;
+    vertical-align:top;
+    margin:1px 2.28% 0 4.49%; /*margin:1px 6.85% 0 6.91%;*/
 }
 
 #imgwidth{
@@ -165,7 +165,7 @@ section{
 .cardtext{
     width:47.81%;
     min-height:91%;
-    display:inline-block;
+    display:inline-block;    
 }
 
 .title{
