--- a/Lesson 4/style/styles.css
+++ b/Lesson 4/style/styles.css
@@ -156,6 +156,7 @@ section{
     height:81%;
     vertical-align:top;
     margin:1px 2.28% 0 4.49%; /*margin:1px 6.85% 0 6.91%;*/
+    padding-bottom:1.48vh;
 }
 
 #imgwidth{
