--- a/Lesson 4/style/styles.css
+++ b/Lesson 4/style/styles.css
@@ -146,7 +146,7 @@ section{
     width:77.55%;
     height:fit-content; /*300px - 15.88vh*/
     margin:1.9% auto;
-    padding: 1.48vh 1.14% 0 0; 
+    padding: 1.4293vh 1.14% 0 0; 
     position: relative;
 }
 
@@ -155,7 +155,7 @@ section{
     width:40.69%;
     height:81%;
     vertical-align:top;
-    margin:1px 2.28% 0 4.49%; /*margin:1px 6.85% 0 6.91%;*/
+    margin:0.052vh 2.28% 0 4.49%; /*margin:1px 6.85% 0 6.91%;*/
     padding-bottom:1.48vh;
 }
 
